--- a/cssunidadedemedida.html
+++ b/cssunidadedemedida.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Exercícios - CSS Unidades e Cores</title>
+  <title>Exercícios - CSS Unidades de medidas</title>
   <style>
     html {
       font-size: 20px;
